feat: add basic responsiveness

--- a/src/components/Converter.module.css
+++ b/src/components/Converter.module.css
@@ -1,8 +1,8 @@
 .form {
   display: flex;
   flex-direction: column;
+  max-width: fit-content;
 
-  padding: 40px;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 4px 5px -6px rgba(0, 0, 0, 0.4);
