--- a/src/components/FeaturedCurrencies.module.css
+++ b/src/components/FeaturedCurrencies.module.css
@@ -1,15 +1,3 @@
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
-
-  padding: 40px 40px;
-
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  box-shadow: 4px 4px 5px -6px rgba(0, 0, 0, 0.4);
-}
-
 .table {
   color: rgb(104, 112, 130);
 }
@@ -24,6 +12,9 @@
 }
 
 .tableData {
+  min-width: 45px;
   padding: 5px 24px;
+
+  text-align: center;
   color: rgb(22, 53, 54);
 }
