--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,5 +1,12 @@
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   column-gap: 40px;
+}
+
+@media screen and (max-width: 1024px) {
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
 }
